# waterleaf

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  modal_app.py  pyproject.toml
assets/demo/: ATTRIBUTION.md
docs/: architecture.md  demo-script.md  field-notes.md  social-post.md  submission-checklist.md  submission-evidence.md
docs/superpowers/plans/: 2026-06-14-hackathon-submission.md
docs/superpowers/specs/: 2026-06-14-hackathon-submission-design.md
evaluation/: README.md  manifest.example.csv
scripts/: compose_demo.py  evaluate.py  smoke_modal.py  submission_assets.py
tests/: test_adapters.py  test_application.py  test_calendar.py  test_compose_demo.py  test_evaluation.py  test_identification.py  test_images.py  test_rate_limit.py  test_runtime.py  test_scheduling.py  test_space.py  test_storage.py  test_submission_assets.py  test_ui.py
waterleaf/: __init__.py  application.py  calendar.py  evaluation.py  images.py  models.py  rate_limit.py  runtime.py  scheduling.py  settings.py  space.py  storage.py  ui.py  web.py
waterleaf/services/: care.py  demo.py  gbif.py  identification.py  llama_cpp.py  open_meteo.py  perenual.py
