[project]
name = "waterleaf"
version = "0.1.0"
description = "Plant identification and weather-aware watering calendar for the Hugging Face Build Small Hackathon."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "gradio[oauth]>=5.49,<7",
  "httpx>=0.28,<1",
  "pillow>=11,<13",
  "pydantic>=2.11,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]
deploy = [
  "modal>=1.1,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["waterleaf"]
